[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "DiffLume"
description = "TUI app for viewing deltas between text files"
version = "0.1.1"
license = "MIT"

authors = [
  "yakimka"
]

readme = "README.md"

repository = "https://github.com/yakimka/DiffLume"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[tool.poetry.scripts]
difflume = "difflume.main:main"

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.35.1"
httpx = "^0.24.1"

[tool.poetry.dev-dependencies]
hypothesis = "^6.84.0"
mypy = "^1.5"
pre-commit = "^3.4.0"
pytest = "^7.4"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-deadfixtures = "^2.2.1"
pytest-randomly = "^3.12"

[tool.isort]
# isort configuration:
# https://github.com/timothycrosley/isort/wiki/isort-Settings
profile = "black"
include_trailing_comma = true
use_parentheses = true
# See https://github.com/timothycrosley/isort#multi-line-output-modes
multi_line_output = 3
line_length = "88"

[tool.black]
line-length = "88"

[tool.pytest.ini_options]
# Directories that are not visited by pytest collector:
norecursedirs = [
  "*.egg",
  ".eggs",
  "dist",
  "build",
  "docs",
  ".tox",
  ".git",
  "__pycache__",
  ".cache",
  ".venv",
  "venv",
]

# Strict `@xfail` by default:
xfail_strict = true

asyncio_mode = "auto"

# Extra options:
addopts = [
  # don't add --cov because it breaks pycharm debugger
  #   just add it manaually when needed to cmd args
  "--strict-markers",
  "--strict-config",
  "--tb=short",
  "--cov-report=term-missing",
  "--cov-report=xml",
#  "--cov-fail-under=100",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
precision = 2
exclude_lines = [
  "if TYPE_CHECKING:",
]

[tool.mypy]
files = ["."]
exclude = ["tests/"]

##
# mypy configurations: https://mypy.readthedocs.io/en/latest/config_file.html
allow_redefinition = false
check_untyped_defs = true
disallow_any_explicit = false
disallow_any_generics = false
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
